[package]
name = "msdos_time"
version = "0.1.2"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
license = "MIT"
description = """
Converts an MsDosDateTime (FAT time) to a Tm value
"""
repository = "https://github.com/mvdnes/msdos_time"
documentation = "https://mvdnes.github.io/rust-docs/msdos_time/msdos_time/"

[lib]
name = "msdos_time"

[dependencies]
time = "0.1"
winapi = "0.2"
kernel32-sys = "0.1"
